<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller</name>
  <version>1.0.0</version>
  <description>A simple controller Node which directs the Simulator bot on where to go.</description>
  <maintainer email="declaneaston@gmail.com">Declan Easton</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
